[project]
name = "curso-langgraph-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.3.1",
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langgraph>=1.2.2",
    "langgraph-cli[inmem]>=0.4.27",
    "python-dotenv>=1.2.2",
]
